appId: com.hatayiyasat.app
---
- tapOn:
    id: "homeTab"
- extendedWaitUntil:
    visible: "Mekanlar"
    timeout: 30000
- assertVisible:
    id: "homeTab"
    selected: true
